--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.0",
+    "marked": "^17.0.1",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "framer-motion": "^11.0.0"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
